Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66955

qmqttconnection doesn't work for already opened websockets

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.0
    • 5.10.1
    • MQTT
    • None
    • Suse 42.3

      gcc v7.2.1
    • 434ed837417ed0692bc55fc882d918a47a6b7e71

      commit cd1d60ec71836d6c4e9cbfbf344ef9334a22cdc4 by Maurice Kalinowski changed qmqttconnection.cpp and added the following to qmqttclient.cpp:

       

      // Once transport has connected, it will invoke
      // QMqttConnection::sendControlConnect to
      // handshake with the broker

       

      however, when the mqtt client is used over a custom websocket based on QIODevice (just like in the by Qt provided mqtt websocket example), this doesn't work anymore, because the following code immediately returns true when the iodevice is already open. Because sendControlConnect() doesn't get called, the mqtt client never connects.

       

      if (m_transportType == QMqttClient::IODevice) {
       if (m_transport->isOpen())
       return true;
       if (!m_transport->open(QIODevice::ReadWrite)) {
        qWarning("Could not open Transport IO device");  
        m_internalState = BrokerDisconnected;
        return false;
       }
      
       return sendControlConnect();
      }
      
      

       Though it might not be the preferred way of solving the problem, the following works:

      diff -u -r git-qt5-qtmqtt-orig/src/mqtt/qmqttconnection.cpp git-qt5-qtmqtt/src/mqtt/qmqttconnection.cpp
      --- git-qt5-qtmqtt-orig/src/mqtt/qmqttconnection.cpp 2018-03-08 16:16:43.974246846 +0100
      +++ git-qt5-qtmqtt/src/mqtt/qmqttconnection.cpp 2018-03-08 16:17:39.353350689 +0100
      @@ -125,7 +125,7 @@
       
       if (m_transportType == QMqttClient::IODevice) {
       if (m_transport->isOpen())
      - return true;
      + return sendControlConnect();
       
       if (!m_transport->open(QIODevice::ReadWrite)) {
       qWarning("Could not open Transport IO device");

       

        For Gerrit Dashboard: QTBUG-66955
        # Subject Branch Project Status CR V

            mkalinow Maurice Kalinowski
            jirauser24743 user-678dd (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes